@@ -1,3 +1,7 @@
+2002-10-14  Per Bothner  <per@bothner.com>
+
+	* misc.scm (environment-bound?):  Fix implementation.
+
 2002-08-14  Per Bothner  <per@bothner.com>
 
 	* syntax.scm (add-procedure-properties):  New helper procedure.
